// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`large 1`] = `
.c0 {
  color: #c3c3c3;
  border: none;
  background: transparent;
  cursor: pointer;
  -webkit-transition: color 0.2s ease-in;
  transition: color 0.2s ease-in;
  font-size: 3em;
  padding: 0.3em;
}

.c0:hover {
  color: #333333;
  -webkit-transition: color 0.2s ease-out;
  transition: color 0.2s ease-out;
}

<DeleteButton
  aria-label="Delete"
  size="large"
  type="button"
>
  <DeleteButton__StyledDeleteButton
    aria-label="Delete"
    size="large"
    type="button"
  >
    <button
      aria-label="Delete"
      className="c0"
      size="large"
      type="button"
    >
      ×
    </button>
  </DeleteButton__StyledDeleteButton>
</DeleteButton>
`;

exports[`medium 1`] = `
.c0 {
  color: #c3c3c3;
  border: none;
  background: transparent;
  cursor: pointer;
  -webkit-transition: color 0.2s ease-in;
  transition: color 0.2s ease-in;
  font-size: 2em;
  padding: 0.3em;
}

.c0:hover {
  color: #333333;
  -webkit-transition: color 0.2s ease-out;
  transition: color 0.2s ease-out;
}

<DeleteButton
  aria-label="Delete"
  size="medium"
  type="button"
>
  <DeleteButton__StyledDeleteButton
    aria-label="Delete"
    size="medium"
    type="button"
  >
    <button
      aria-label="Delete"
      className="c0"
      size="medium"
      type="button"
    >
      ×
    </button>
  </DeleteButton__StyledDeleteButton>
</DeleteButton>
`;

exports[`small 1`] = `
.c0 {
  color: #c3c3c3;
  border: none;
  background: transparent;
  cursor: pointer;
  -webkit-transition: color 0.2s ease-in;
  transition: color 0.2s ease-in;
  font-size: 1.25em;
  padding: 0 auto;
}

.c0:hover {
  color: #333333;
  -webkit-transition: color 0.2s ease-out;
  transition: color 0.2s ease-out;
}

<DeleteButton
  aria-label="Delete"
  size="small"
  type="button"
>
  <DeleteButton__StyledDeleteButton
    aria-label="Delete"
    size="small"
    type="button"
  >
    <button
      aria-label="Delete"
      className="c0"
      size="small"
      type="button"
    >
      ×
    </button>
  </DeleteButton__StyledDeleteButton>
</DeleteButton>
`;
